--- a/src/main/webapp/Customerhome.html
+++ b/src/main/webapp/Customerhome.html
@@ -6,7 +6,7 @@
 </head>
 <body bgcolor="skyblue" >
 <center>
-<h1 >Customer Login Page</h1>
+<h1 >Customer Home Page</h1>
 <a href="SelectType.jsp"><button>Create Bank Account</button></a><br><br>
 <a href="featchactiveaccount"><button>Already have an Account? Click Here</button></a><br><br>
 <a href="logout" ><button >Logout</button></a>
