--- a/src/main/webapp/Adminlogin.html
+++ b/src/main/webapp/Adminlogin.html
@@ -81,7 +81,7 @@ a {
 </head>
 <center>
 <body bgcolor="marronyellow">
-<h1>Welcome to Admin Login Page</h1>
+<h1>Welcome to Admin Home Page</h1>
 <form action="adminlogin" method="post" >
 <input type="text" name="email" placeholder="Enter Your email"> <br><br>
 <input type="text" name="password" placeholder="Enter Your Password"> <br><br>
