--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -18,7 +18,7 @@
 		<button type="reset">Cancel</button>
 	</form>
 	<br>
-	<a href="signup.html">Forgot Password?</a> <br><br>
+	<a href="signup.html">Create An New account?</a> <br><br>
 	<a href="home.html" button>HOME</a>
  
 	</center>
